--- a/platform/user/pom.xml
+++ b/platform/user/pom.xml
@@ -1,19 +1,26 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.spring</groupId>
-    <artifactId>platform</artifactId>
-    <version>platform-v1</version>
-  </parent>
-  <artifactId>user</artifactId>
-  <name>user</name>
-  <description>User Management Module</description>
-  <version>user-v1</version>
-  <dependencies>
-  	<dependency>
-  		<groupId>com.spring</groupId>
-  		<artifactId>tenant</artifactId>
-  		<version>tenant-v1</version>
-  	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.platform</groupId>
+		<artifactId>platform</artifactId>
+		<version>platform-v1</version>
+	</parent>
+	<artifactId>user</artifactId>
+	<name>user</name>
+	<description>User Management Module</description>
+	<version>user-v1</version>
+	<dependencies>
+		<dependency>
+			<groupId>com.platform</groupId>
+			<artifactId>base</artifactId>
+			<version>base-v1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.platform</groupId>
+			<artifactId>tenant</artifactId>
+			<version>tenant-v1</version>
+		</dependency>
+	</dependencies>
 </project>
