--- a/platform/platformcore/src/main/resources/application.properties
+++ b/platform/platformcore/src/main/resources/application.properties
@@ -42,8 +42,11 @@ spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 #spring.flyway.validate-on-migrate
 
-#JWT implementation
+# JWT implementation
 spring.security.jwt.secret = private-Learning_app@2020
 
-#CORS configuration (filtering is done at realm level)
+# CORS configuration (filtering is done at realm level)
 cors.allowed-origin = *
+
+# Trusted IP's
+spring.trusted.ips = ["10.12", "192.106"]
